# 1d_cnn

./: README.md  model.py  pyproject.toml  train.py
