[tool.poetry]
name = "keras_1dconv_regression"
version = "0.1.0"
description = ""
authors = ["dummy"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
scikit-learn = "^1.3.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.00"]
build-backend = "poetry.core.masonry.api"
